# dyn-oppoint-modifier

./: .gitignore  CMakeLists.txt  package.xml
include/sot-core/: DynOppointModifier.hh  dyn-op-point-modifier.hh
src/: CMakeLists.txt  DynOppointModifier.cpp  dyn-op-point-modifier.cpp
src/dynamic_graph/sot/core/: meta_task_dyn_op_point.py  meta_task_dyn_oppoint_modifier.py
